add lib tsyinge e refatorando o fluxo de Category e Specification.
