# src/routes/specifications.routes.ts
@@ -1,18 +1,15 @@
 import { Router } from "express";
-import { createSpecificationController } from "../module/cars/useCases/createSpecification";
-import { listSpecificationsController } from "../module/cars/useCases/listSpecifications";
+import { CreateSpecificationController } from "../module/cars/useCases/createSpecification/CreateSpecificationController";
+import { ListSpecificationsController } from "../module/cars/useCases/listSpecifications/ListSpecificationsController";
 
 const specificationsRoutes = Router();
 
 
+const createSpecificationUseCase = new CreateSpecificationController();
+const listSpecificationsController = new ListSpecificationsController();
 
-specificationsRoutes.post("/", (request, response) => {
-    return createSpecificationController.handle(request, response);
-});
+specificationsRoutes.post("/", createSpecificationUseCase.handle);
 
-
-specificationsRoutes.get("/", (request, response) => {
-   return listSpecificationsController.handle(request, response);
-})
+specificationsRoutes.get("/", listSpecificationsController.handle);
 
 export { specificationsRoutes };
