# src/swagger.json
@@ -1,69 +1,68 @@
 {
-    "openapi": "3.0.0",
-    "info": {
-        "title": "Rentalx Documentation",
-        "description": "This is an API Rent",
-        "version": "1.0.0",
-        "contact": {
-            "email": "deivi_gf144@hotmail.com"
-        }
-    },
-    "paths": {
-        "/categories": {
-            "post": {
-                "tags": ["Category"],
-                "summary": "Create a Category",
-                "description": "Create a new Category",
-                "requestBody": {
-                    "content": {
-                        "application/json":{
-                            "schema": {
-                                "type": "object",
-                                "properties": {
-                                    "name": {
-                                        "type": "string"
-                                    },
-                                    "description": {
-                                        "type": "string"
-                                    }
+  "openapi": "3.0.0",
+  "info": {
+    "title": "Rentalx Documentation",
+    "description": "This is an API Rent",
+    "version": "1.0.0",
+    "contact": {
+      "email": "deivi_gf144@hotmail.com"
+    }
+  },
+  "paths": {
+    "/categories": {
+        "post": {
+            "tags": ["Category"],
+            "summary": "Create a Category",
+            "description": "Create a new Category",
+            "requestBody": {
+                "content": {
+                    "application/json":{
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "name": {
+                                    "type": "string"
                                 },
-                                "example": {
-                                    "name": "Category name sample",
-                                    "description": "Category description sample"
+                                "description": {
+                                    "type": "string"
                                 }
+                            },
+                            "example": {
+                                "name": "Category name sample",
+                                "description": "Category description sample"
                             }
                         }
                     }
-                },
-                "responses": {
-                    "201": {
-                        "descripton": "Created"
-                    },
-                    "500": {
-                        "description":  "Category already exists"
-                    }
                 }
             },
-            "get": {
-                "tags": ["Category"],
-                "summary": "List all categgories",
-                "description": "List all categories",
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "type": "object",
-                                        "properties": {
-                                            "name": {
-                                                "type": "string"
-                                            },
-                                            "description": {
-                                                "type": "string"
-                                            }
+            "responses": {
+                "201": {
+                    "descripton": "Created"
+                },
+                "500": {
+                    "description":  "Category already exists"
+                }
+            }
+        },
+        "get": {
+            "tags": ["Category"],
+            "summary": "List all categgories",
+            "description": "List all categories",
+            "responses": {
+                "200": {
+                    "description": "Success",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "array",
+                                "items": {
+                                    "type": "object",
+                                    "properties": {
+                                        "name": {
+                                            "type": "string"
+                                        },
+                                        "description": {
+                                            "type": "string"
                                         }
                                     }
                                 }
@@ -73,5 +72,71 @@
                 }
             }
         }
+    },
+    "/categories/import":{
+      "post": {
+        "tags": ["Category"],
+        "summary": "Upload a new category",
+        "description": "Upload a new category",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "file": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created"
+          }
+        }
+      }
+    },
+    "/specifications": {
+      "post": {
+        "tags": ["Specifications"],
+        "summary": "Create a Specification",
+        "description": "Create a new specification",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#definitions/Specification"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Specification already exists"
+          }
+        }
+      }
     }
+  },
+  "definitions": {
+    "Specification": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        }
+      }
+    }
+  }
+
 }
